// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render HotelForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="name"
    type="text"
    value=""
  />
  <div
    className="date-time-picker"
  >
    <withStyles(DateRangePicker)
      anchorDirection="left"
      appendToBody={false}
      block={false}
      calendarInfoPosition="bottom"
      customArrowIcon={null}
      customCloseIcon={null}
      customInputIcon={null}
      dayPickerNavigationInlineStyles={null}
      daySize={39}
      disableScroll={false}
      disabled={false}
      displayFormat="YYYY/MM/DD"
      enableOutsideDays={false}
      endDate={"1970-01-02T00:00:00.000Z"}
      endDateId="check_out_date_id"
      endDatePlaceholderText="End Date"
      firstDayOfWeek={null}
      focusedInput={null}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      initialVisibleMonth={null}
      inputIconPosition="before"
      isDayBlocked={[Function]}
      isDayHighlighted={[Function]}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      minimumNights={1}
      monthFormat="MMMM YYYY"
      navNext={null}
      navPosition="navPositionTop"
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onClose={[Function]}
      onDatesChange={[Function]}
      onFocusChange={[Function]}
      onNextMonthClick={[Function]}
      onPrevMonthClick={[Function]}
      openDirection="down"
      orientation="horizontal"
      phrases={
        Object {
          "calendarLabel": "Calendar",
          "chooseAvailableEndDate": [Function],
          "chooseAvailableStartDate": [Function],
          "clearDates": "Clear Dates",
          "closeDatePicker": "Close",
          "dateIsSelected": [Function],
          "dateIsSelectedAsEndDate": [Function],
          "dateIsSelectedAsStartDate": [Function],
          "dateIsUnavailable": [Function],
          "enterKey": "Enter key",
          "escape": "Escape key",
          "focusStartDate": "Interact with the calendar and add the check-in date for your trip.",
          "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
          "homeEnd": "Home and end keys",
          "jumpToNextMonth": "Move forward to switch to the next month.",
          "jumpToPrevMonth": "Move backward to switch to the previous month.",
          "keyboardBackwardNavigationInstructions": "Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
          "keyboardForwardNavigationInstructions": "Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
          "keyboardShortcuts": "Keyboard Shortcuts",
          "leftArrowRightArrow": "Right and left arrow keys",
          "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
          "moveFocusByOneMonth": "Switch months.",
          "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
          "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
          "openThisPanel": "Open this panel.",
          "pageUpPageDown": "page up and page down keys",
          "questionMark": "Question mark",
          "returnFocusToInput": "Return to the date input field.",
          "roleDescription": "datepicker",
          "selectFocusedDate": "Select the date in focus.",
          "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
          "upArrowDownArrow": "up and down arrow keys",
        }
      }
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonthElement={null}
      renderMonthText={null}
      renderNavNextButton={null}
      renderNavPrevButton={null}
      renderWeekHeaderElement={null}
      reopenPickerOnClearDates={false}
      required={false}
      screenReaderInputMessage=""
      showClearDates={false}
      showDefaultInputIcon={false}
      small={false}
      startDate={"1970-01-01T00:00:00.000Z"}
      startDateId="check_in_date_id"
      startDatePlaceholderText="Start Date"
      verticalHeight={null}
      verticalSpacing={22}
      weekDayFormat="dd"
      withFullScreenPortal={false}
      withPortal={false}
    />
  </div>
  <div
    className="date-time-picker"
  >
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="Check-in Time"
        onChange={[Function]}
        openTo="hours"
        value={"1500-01-01T00:00:00.000Z"}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="Check-out Time"
        onChange={[Function]}
        openTo="hours"
        value={"1100-01-01T00:00:00.000Z"}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
  </div>
  <div
    className="date-time-picker"
  >
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="ETA"
        onChange={[Function]}
        openTo="hours"
        value={"1500-01-01T00:00:00.000Z"}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="ETD"
        onChange={[Function]}
        openTo="hours"
        value={"1100-01-01T00:00:00.000Z"}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
  </div>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="location"
    type="text"
    value=""
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add a note for your hotel (optional)"
    value=""
  />
  <button
    className="btn-push"
  >
    Save Hotel
  </button>
</form>
`;

exports[`should render HotelForm correctly with trip data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="name"
    type="text"
    value="Waikiki Resort Hotel"
  />
  <div
    className="date-time-picker"
  >
    <withStyles(DateRangePicker)
      anchorDirection="left"
      appendToBody={false}
      block={false}
      calendarInfoPosition="bottom"
      customArrowIcon={null}
      customCloseIcon={null}
      customInputIcon={null}
      dayPickerNavigationInlineStyles={null}
      daySize={39}
      disableScroll={false}
      disabled={false}
      displayFormat="YYYY/MM/DD"
      enableOutsideDays={false}
      endDate={"1970-01-03T00:00:00.000Z"}
      endDateId="check_out_date_id"
      endDatePlaceholderText="End Date"
      firstDayOfWeek={null}
      focusedInput={null}
      hideKeyboardShortcutsPanel={false}
      horizontalMargin={0}
      initialVisibleMonth={null}
      inputIconPosition="before"
      isDayBlocked={[Function]}
      isDayHighlighted={[Function]}
      isOutsideRange={[Function]}
      isRTL={false}
      keepFocusOnInput={false}
      keepOpenOnDateSelect={false}
      minimumNights={1}
      monthFormat="MMMM YYYY"
      navNext={null}
      navPosition="navPositionTop"
      navPrev={null}
      noBorder={false}
      numberOfMonths={1}
      onClose={[Function]}
      onDatesChange={[Function]}
      onFocusChange={[Function]}
      onNextMonthClick={[Function]}
      onPrevMonthClick={[Function]}
      openDirection="down"
      orientation="horizontal"
      phrases={
        Object {
          "calendarLabel": "Calendar",
          "chooseAvailableEndDate": [Function],
          "chooseAvailableStartDate": [Function],
          "clearDates": "Clear Dates",
          "closeDatePicker": "Close",
          "dateIsSelected": [Function],
          "dateIsSelectedAsEndDate": [Function],
          "dateIsSelectedAsStartDate": [Function],
          "dateIsUnavailable": [Function],
          "enterKey": "Enter key",
          "escape": "Escape key",
          "focusStartDate": "Interact with the calendar and add the check-in date for your trip.",
          "hideKeyboardShortcutsPanel": "Close the shortcuts panel.",
          "homeEnd": "Home and end keys",
          "jumpToNextMonth": "Move forward to switch to the next month.",
          "jumpToPrevMonth": "Move backward to switch to the previous month.",
          "keyboardBackwardNavigationInstructions": "Navigate backward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
          "keyboardForwardNavigationInstructions": "Navigate forward to interact with the calendar and select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
          "keyboardShortcuts": "Keyboard Shortcuts",
          "leftArrowRightArrow": "Right and left arrow keys",
          "moveFocusByOneDay": "Move backward (left) and forward (right) by one day.",
          "moveFocusByOneMonth": "Switch months.",
          "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week.",
          "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week.",
          "openThisPanel": "Open this panel.",
          "pageUpPageDown": "page up and page down keys",
          "questionMark": "Question mark",
          "returnFocusToInput": "Return to the date input field.",
          "roleDescription": "datepicker",
          "selectFocusedDate": "Select the date in focus.",
          "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel.",
          "upArrowDownArrow": "up and down arrow keys",
        }
      }
      readOnly={false}
      regular={false}
      renderCalendarInfo={null}
      renderDayContents={null}
      renderMonthElement={null}
      renderMonthText={null}
      renderNavNextButton={null}
      renderNavPrevButton={null}
      renderWeekHeaderElement={null}
      reopenPickerOnClearDates={false}
      required={false}
      screenReaderInputMessage=""
      showClearDates={false}
      showDefaultInputIcon={false}
      small={false}
      startDate={"1970-01-02T00:00:00.000Z"}
      startDateId="check_in_date_id"
      startDatePlaceholderText="Start Date"
      verticalHeight={null}
      verticalSpacing={22}
      weekDayFormat="dd"
      withFullScreenPortal={false}
      withPortal={false}
    />
  </div>
  <div
    className="date-time-picker"
  >
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="Check-in Time"
        onChange={[Function]}
        openTo="hours"
        value={"1970-01-01T06:00:00.000Z"}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="Check-out Time"
        onChange={[Function]}
        openTo="hours"
        value={"1970-01-01T02:00:00.000Z"}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
  </div>
  <div
    className="date-time-picker"
  >
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="ETA"
        onChange={[Function]}
        openTo="hours"
        value={32400000}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
    <MuiPickersUtilsProvider
      utils={[Function]}
    >
      <PickerWithState
        ampm={true}
        invalidDateMessage="Invalid Time Format"
        label="ETD"
        onChange={[Function]}
        openTo="hours"
        value={0}
        views={
          Array [
            "hours",
            "minutes",
          ]
        }
      />
    </MuiPickersUtilsProvider>
  </div>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="location"
    type="text"
    value="Waikiki"
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add a note for your hotel (optional)"
    value=""
  />
  <button
    className="btn-push"
  >
    Save Hotel
  </button>
</form>
`;
